--- a/public/ce/primary/headline_ce.html
+++ b/public/ce/primary/headline_ce.html
@@ -64,7 +64,7 @@
 				const combineLatest$ = function(...streams) {
 					return Rx.Observable.combineLatest(streams);
 				};
-				combineLatest$(myRxmq.channel(e.detail[0]).behaviorobserve('amount'), myRxmq.channel(e.detail[0]).behaviorobserve('increase'))					
+				combineLatest$(myRxmq.channel(e.detail[0]).behaviorobserve(e.detail[1]), myRxmq.channel(e.detail[0]).behaviorobserve('increase'))					
 				.map(([e1, e2]) => [Number(e1), Number(e2)])
 				.subscribe((x) => {
 					let year = that.year;
