Last for today - working

--- a/public/ce/composed_with_slots/section_input_ce.html
+++ b/public/ce/composed_with_slots/section_input_ce.html
@@ -11,7 +11,7 @@
   				grid-template-rows: auto;
 				grid-column-gap: 20px;
 				grid-row-gap: 20px;
-				background-color: var(--main-bg-color, azure)
+				background-color: var(--main-bg-color, azure);
 			}
 			
 			/* :host([color="blue"]) ::slotted(h1) {
