--- a/public/ce/primary/select_ce.html
+++ b/public/ce/primary/select_ce.html
@@ -20,11 +20,11 @@
 		<div class="input-group mb-3">
 			<select id="select" class="custom-select">
 			  <option disabled selected value="">välj...</option>
-			  <option value="1">One</option>
-			  <option value="2">Two</option>
-			  <option value="3">Three</option>
-			  <option value="4">Four</option>
-			  <option value="5">Five</option>
+			  <option value="0.01">1</option>
+			  <option value="0.02">2</option>
+			  <option value="0.03">3</option>
+			  <option value="0.04">5</option>
+			  <option value="0.05">5</option>
 			</select>
 		  </div>
 	
@@ -39,14 +39,15 @@
 	class SelectCE extends CustomElement {
 
 		constructor() {
-			super();		
+			super();	
+			this.parent;	
 			this.thatDoc = thatDoc;
 			this.thisDoc = thisDoc;
 			this.extend();
 		}
 
 		static get observedAttributes() {
-			return [ 'selectedindex'];
+			return [ 'selectedindex', 'sb'];
 		}
 
 		
@@ -55,10 +56,39 @@
 			
 			//intit
 			this.ctrl.run = function() {
+				if (!h.boolean.isEmpty(that.sb)) {
+					that.ctrl.stream();
+				}
 				if (!h.boolean.isEmpty(that.selectedindex)) {
 					let attribute = 'selectedindex';
 					view.updateView(attribute, that[attribute]);
 				}
+			};
+
+
+			//stream from element
+			this.ctrl.stream = function() {
+				console.log('STREAM IN SELECT');
+				const element$ = function(element) {
+					return Rx.Observable.merge(Rx.Observable.of(element), Rx.Observable.fromEvent(element, 'change').map(x => x.target), Rx.Observable.fromEvent(element, 'select').map(x => x.target), Rx.Observable.fromEvent(element, 'blur').map(x => x.target), Rx.Observable.fromEvent(element, 'click').map(x => x.target), Rx.Observable.fromEvent(element, 'keyup').filter(x => x.keyCode == 13).map(x => x.target));
+				};
+
+				element$(that)
+				// .map(element => element.value)
+				// .subscribe(myRxmq.channel(that.sbChannel).behaviorsubject(that.sbSubject));
+				.subscribe(console.log)
+			};
+
+			this.ctrl.changedAttribute = function(details) {
+				console.log('DETAILS!');
+				console.log(details.changedAttribute);
+				if (details.changedAttribute.name === "selectedindex") {
+					console.log('here');
+					console.log(that.shadowRoot.querySelector('#select').options[details.changedAttribute.newVal].value);
+					myRxmq.channel(that.sbChannel).behaviorsubject(that.sbSubject).next(that.shadowRoot.querySelector('#select').options[details.changedAttribute.newVal].value);
+				}
+
+				
 			};
 
 			this.ctrl.addedUserAction = function(data, attribute) {
