--- a/public/ce/composed_with_slots/section_output_ce.html
+++ b/public/ce/composed_with_slots/section_output_ce.html
@@ -5,39 +5,37 @@
 	<style>
 			:host {
 				display: grid;
-				grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-				/*grid-auto-rows: minmax(150px, auto);*/
-				grid-gap: 1em;
+				padding: 40px;
+				padding-top: 60px;
+				background-color: azure;
+				grid-template-columns: 100%;
+  				grid-template-rows: auto;
+				grid-column-gap: 20px;
+				grid-row-gap: 20px;
 			}
 
 
-			.module {
-			/* Demo-Specific Styles */
-			background: #eaeaea;
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			/*height: 200px;*/
+			#anyheadline::slotted(*) {
+				color: green;
+				grid-column-start: 1;
+  				grid-column-end: 1;
+  				grid-row-start: 1;
+  				grid-row-end: 1;
+			}
+
+			#anycontainer::slotted(*) {
+				color: green;
+				grid-column-start: auto;
+  				grid-column-end: auto;
+  				grid-row-start: auto;
+  				grid-row-end: auto;
 			}
 			
 			
 			</style>
+		<slot id="anyheadline" name="anyheadline"></slot>
+		<slot id="anycontainer" name="anycontainer"></slot>
 		
-		<div class="module">1</div>
-		<div class="module">2</div>
-		<div class="module">3</div>
-		<div class="module">4</div>
-		<div class="module">5</div>
-		<div class="module">6</div>
-		<div class="module">7</div>
-		<div class="module">8</div>
-		<div class="module">9</div>
-		<div class="module">10</div>
-		<div class="module">11</div>
-		<div class="module">12</div>
-		<div class="module">13</div>
-		<div class="module">14</div>
-		<div class="module">15</div>
 
 </template>
 
