Starting to extend class with module import.

--- a/public/ce/composed_without_slots/headline_input_ce.html
+++ b/public/ce/composed_without_slots/headline_input_ce.html
@@ -46,7 +46,7 @@
 			</style>
 
 			<headline-ce id="headline" title class="h5"></headline-ce>
-			<input-ce id="input" sb="" placeholder value></input-ce>
+			<input4-ce id="input" sb="" placeholder value></input4-ce>
 			<slot id="anyinput" name="anyinput"></slot>
 </template>
 
