--- a/public/ce/primary/input_ce.html
+++ b/public/ce/primary/input_ce.html
@@ -157,8 +157,21 @@
 
 	window.customElements.define('input-ce', InputCE);
 
+	// module.exports = {
+	// 	InputCE: InputCE
+	// };
+
+	// class InputCE2 extends InputCE {
+	// 	constructor() {
+	// 		super();
+	// 	}
+	// }
+
+	// window.customElements.define('input-ce2', InputCE2);
+
 
 })(window, document);
+ 
 </script>
 
 <script type="text/javascript" src="/js/curry.js"></script>
