--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/5.5.10/Rx.min.js"></script>
   <script src="js/rxmq.js" type="text/javascript"></script>
   <script src="js/curry.js" type="text/javascript"></script>
+  <script type="module" src="js/inputce2.js"></script>
+  <!-- <script src="js/inputce.js"></script> -->
   <script src="js/helper.js" type="text/javascript"></script>
   <script src="js/customelement.js" type="text/javascript"></script>
+  <script src="js/customelement2.js" type="text/javascript"></script>
   <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/ramda/0.25.0/ramda.min.js"></script>
   
@@ -30,6 +33,10 @@
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <script>
+    // import { PI } from 'js/inputce.js';
+
+    // alert(PI);
+
     
     function getSlot(name, that) {
 		return that.shadowRoot.querySelector("slot[name=" + name + "]");
@@ -45,10 +52,19 @@
 
     var startyear = "hej";
 
+    
+
 </script>
+
+<!-- <script type="module">
+        import { PI } from '../js/inputce.js';
+
+        alert(PI);
+</script> -->
 
 
   <link rel="import" href="ce/primary/input_ce.html">
+  <link rel="import" href="ce/primary/input4_ce.html">
   <link rel="import" href="ce/primary/headline_ce.html">
   <link rel="import" href="ce/primary/button_ce.html">
   <link rel="import" href="ce/primary/select_ce.html">
@@ -203,7 +219,7 @@
                     <input-ce title="År 1" placeholder="Antal kr/kvm..." value="" slot="anyinput"></input-ce>
                 </headline-input-ce>
                 <headline-input-ce title="År 2" placeholder="Antal kr/kvm..." value="" slot="anyform">
-                    <input-ce title="År 2" placeholder="Antal kr/kvm..." value="" slot="anyinput"></input-ce>
+                    <input4-ce title="År 2" placeholder="Antal kr/kvm..." value="" slot="anyinput"></input4-ce>
                 </headline-input-ce>
                 <headline-input-ce title="År 3" placeholder="Antal kr/kvm..." value="" slot="anyform">
                     <input-ce title="År 3" placeholder="Antal kr/kvm..." value="" slot="anyinput"></input-ce>
