I the middle of change from html to js for all CE

--- a/public/ce/composed_without_slots/headline_input_ce.html
+++ b/public/ce/composed_without_slots/headline_input_ce.html
@@ -35,19 +35,19 @@
   				grid-row-end: 4;
 			}
 
-			#anyinput::slotted(*) {
+			/* #anyinput::slotted(*) {
 				color: green;
 				grid-column-start: 1;
   				grid-column-end: 1;
   				grid-row-start: 6;
   				grid-row-end: 6;
-			}
+			} */
 
 			</style>
 
 			<headline-ce id="headline" title class="h5"></headline-ce>
-			<input4-ce id="input" sb="" placeholder value></input4-ce>
-			<slot id="anyinput" name="anyinput"></slot>
+			<input-one-ce id="input" sb="" placeholder value></input-one-ce>
+			<!-- <slot id="anyinput" name="anyinput"></slot> -->
 </template>
 
 
