Moved all to js

--- a/public/ce/html/headline_ce.html
+++ b/public/ce/html/headline_ce.html
@@ -52,6 +52,23 @@
 				}
 			};
 
+			//stream from element
+			this.ctrl.stream = function() {
+				const element$ = function(element) {
+					return Rx.Observable.merge(Rx.Observable.of(element), Rx.Observable.fromEvent(element, 'blur').map(x => x.target), Rx.Observable.fromEvent(element, 'click').map(x => x.target), Rx.Observable.fromEvent(element, 'keyup').filter(x => x.keyCode == 13).map(x => x.target));
+				};
+
+				element$(that)
+				.map(element => element.value)
+				.subscribe(myRxmq.channel(that.sbChannel).behaviorsubject(that.sbSubject));
+			};
+
+			this.ctrl.changedAttribute = function(details) {
+				console.log('DETAILS!');
+				console.log(details.changedAttribute.newVal);
+				myRxmq.channel(that.sbChannel).behaviorsubject(that.sbSubject).next(details.changedAttribute.newVal);
+			};
+
 
 			//local events initiated by parent
 
