--- a/public/ce/html/headline_input_ce.html
+++ b/public/ce/html/headline_input_ce.html
@@ -15,7 +15,7 @@
 			:host {
 				display: inline-grid;
 				grid-template-columns: auto;
-  				grid-template-rows: 20px auto 20px auto 20px auto 20px;
+  				grid-template-rows: 20px auto 20px auto 20px;
 				background-color: beige
 			}
 			
@@ -35,19 +35,10 @@
   				grid-row-end: 4;
 			}
 
-			/* #anyinput::slotted(*) {
-				color: green;
-				grid-column-start: 1;
-  				grid-column-end: 1;
-  				grid-row-start: 6;
-  				grid-row-end: 6;
-			} */
-
 			</style>
 
 			<headline-ce id="headline" title class="h5"></headline-ce>
-			<input-one-ce id="input" sb="" placeholder value></input-one-ce>
-			<!-- <slot id="anyinput" name="anyinput"></slot> -->
+			<input-ce id="input" sb="" placeholder value></input-ce>
 </template>
 
 
@@ -82,6 +73,23 @@
 				eventDispatcher(input.eventTarget, 'attributefromparent', {parent: that, attribute: 'placeholder', data: that.placeholder}); //Makes child component announce from headline component internally. The parent is attached in event e.details.
 				eventDispatcher(input.eventTarget, 'attributefromparent', {parent: that, attribute: 'value', data: that.value}); //Makes child component announce from headline component internally. The parent is attached in event e.details.
 				eventDispatcher(input.eventTarget, 'attributefromparent', {parent: that, attribute: 'sb', data: that.sb});
+			};
+
+			//stream from element
+			this.ctrl.stream = function() {
+				const element$ = function(element) {
+					return Rx.Observable.merge(Rx.Observable.of(element), Rx.Observable.fromEvent(element, 'blur').map(x => x.target), Rx.Observable.fromEvent(element, 'click').map(x => x.target), Rx.Observable.fromEvent(element, 'keyup').filter(x => x.keyCode == 13).map(x => x.target));
+				};
+
+				element$(that)
+				.map(element => element.value)
+				.subscribe(myRxmq.channel(that.sbChannel).behaviorsubject(that.sbSubject));
+			};
+
+			this.ctrl.changedAttribute = function(details) {
+				console.log('DETAILS!');
+				console.log(details.changedAttribute.newVal);
+				myRxmq.channel(that.sbChannel).behaviorsubject(that.sbSubject).next(details.changedAttribute.newVal);
 			};
 
 			//local events initiated by child
