--- a/public/index.html
+++ b/public/index.html
@@ -16,15 +16,20 @@
   <script src="js/helper.js" type="text/javascript"></script>
   <script src="js/customelement.js" type="text/javascript"></script>
   <script src="js/customelement2.js" type="text/javascript"></script>
-  <script src="ce/primary/input_base_ce.js" type="module"></script>
-  <script src="ce/primary/select_base_ce.js" type="module"></script>
-  <script src="ce/primary/headline_base_ce.js" type="module"></script>
-  <script src="ce/primary/button_base_ce.js" type="module"></script>
+  <script src="js/customelement3.js" type="text/javascript"></script>
+  <script src="ce/primary/input_one_ce.js" type="module"></script>
+  <script src="ce/primary/select_one_ce.js" type="module"></script>
+  <script src="ce/primary/select_inflation_ce.js" type="module"></script>
+  <script src="ce/primary/headline_one_ce.js" type="module"></script>
+  <script src="ce/primary/button_one_ce.js" type="module"></script>
   <script src="ce/composed_without_slots/headline_input_base_ce.js" type="module"></script>
+  <script src="ce/composed_without_slots/headline_input_one_ce.js" type="module"></script>
   <script src="ce/composed_without_slots/headline_select_base_ce.js" type="module"></script>
-  <script src="ce/composed_with_slots/anykind_container_ce.js" type="module"></script>
-  <script src="ce/composed_with_slots/section_input_ce.js" type="module"></script>
-  <script src="ce/composed_with_slots/section_output_ce.js" type="module"></script>
+  <script src="ce/composed_without_slots/headline_select_one_ce.js" type="module"></script>
+  <script src="ce/composed_without_slots/headline_select_inflation_ce.js" type="module"></script>
+  <script src="ce/composed_with_slots/anykind_container_one_ce.js" type="module"></script>
+  <script src="ce/composed_with_slots/section_input_one_ce.js" type="module"></script>
+  <script src="ce/composed_with_slots/section_output_one_ce.js" type="module"></script>
   <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/ramda/0.25.0/ramda.min.js"></script>
   
@@ -198,65 +203,65 @@
 
 
 
-<section-input-ce listener="cleargeneralinputsection@clearanykindcontainers">
+<section-input-one-ce listener="cleargeneralinputsection@clearanykindcontainers">
         
-    <headline-base-ce title="Allmänt" id="mainheadline" class="h1 text-info" slot="anyheadline"></headline-base-ce>
-    <button-base-ce value="Rensa" toggle id="clearbutton" class="btn btn-secondary" dispatch="cleargeneralinputsection" slot="anybutton" sb="clearbutton1:click"></button-base-ce>
+    <headline-one-ce title="Allmänt" id="mainheadline" class="h1 text-info" slot="anyheadline"></headline-one-ce>
+    <button-one-ce value="Rensa" toggle id="clearbutton" class="btn btn-secondary" dispatch="cleargeneralinputsection" slot="anybutton" sb="clearbutton1:click"></button-one-ce>
     
-    <anykind-container-ce slot="anycontainer">
-        <headline-base-ce title="Kalkylperiod" class="h4" slot="headline"></headline-base-ce>
-        <headline-select-base-ce title="Startår" selectedindex="3" slot="anyform" datatarget="startyear"></headline-select-base-ce>
-        <headline-input-base-ce title="Kalkyllängd" value="" placeholder="Antal brukare..." slot="anyform" sb="textinput1:keyup" sr="textinput1:keyup@updateheadline3$"></headline-input-base-ce>     
-    </anykind-container-ce>
+    <anykind-container-one-ce slot="anycontainer">
+        <headline-one-ce title="Kalkylperiod" class="h4" slot="headline"></headline-one-ce>
+        <headline-select-one-ce title="Startår" selectedindex="3" slot="anyform" datatarget="startyear"></headline-select-one-ce>
+        <headline-input-one-ce title="Kalkyllängd" value="" placeholder="Antal brukare..." slot="anyform" sb="textinput1:keyup" sr="textinput1:keyup@updateheadline3$"></headline-input-one-ce>     
+    </anykind-container-one-ce>
 
-    <anykind-container-ce slot="anycontainer">
-        <headline-base-ce title="Inflation" class="h4" slot="headline"></headline-base-ce>
-        <headline-select-base-ce title="Inflation" selectedindex="0" slot="anyform" datatarget="inflation" sb="inflation:rate"></headline-select-base-ce>   
-    </anykind-container-ce> 
+    <anykind-container-one-ce slot="anycontainer">
+        <headline-one-ce title="Inflation" class="h4" slot="headline"></headline-one-ce>
+        <headline-select-inflation-ce title="Inflation" selectedindex="0" slot="anyform" datatarget="inflation" sb="inflation:rate"></headline-select-inflation-ce>   
+    </anykind-container-one-ce> 
 
-    <anykind-container-ce slot="anycontainer">
-        <headline-base-ce title="Kalkylränta" class="h4" slot="headline"></headline-base-ce>
-        <headline-select-base-ce title="Kalkylränta" selectedindex="0" slot="anyform" datatarget="discountrate" sb="discount:rate"></headline-select-base-ce>   
-    </anykind-container-ce> 
+    <anykind-container-one-ce slot="anycontainer">
+        <headline-one-ce title="Kalkylränta" class="h4" slot="headline"></headline-one-ce>
+        <headline-select-one-ce title="Kalkylränta" selectedindex="0" slot="anyform" datatarget="discountrate" sb="discount:rate"></headline-select-one-ce>   
+    </anykind-container-one-ce> 
 
-    <anykind-container-ce slot="anycontainer">
-        <headline-base-ce title="Värmekostnader" class="h4" slot="headline"></headline-base-ce>
-        <headline-input-base-ce title="Antal kWh/kvm/år" value="" placeholder="Antal brukare..." slot="anyform" sb="heat:kwh" sr="clearbutton2:click@updateheadline2$"></headline-input-base-ce> 
-        <headline-select-base-ce title="Kostnad per kWh" selectedindex="0" slot="anyform" datatarget="heatcost" sb="heat:price"></headline-select-base-ce>
-    </anykind-container-ce>
+    <anykind-container-one-ce slot="anycontainer">
+        <headline-one-ce title="Värmekostnader" class="h4" slot="headline"></headline-one-ce>
+        <headline-input-one-ce title="Antal kWh/kvm/år" value="" placeholder="Antal brukare..." slot="anyform" sb="heat:kwh" sr="clearbutton2:click@updateheadline2$"></headline-input-one-ce> 
+        <headline-select-one-ce title="Kostnad per kWh" selectedindex="0" slot="anyform" datatarget="heatcost" sb="heat:price"></headline-select-one-ce>
+    </anykind-container-one-ce>
 
-    <anykind-container-ce slot="anycontainer">
-        <headline-base-ce title="Brukare" class="h4" slot="headline"></headline-base-ce>
-        <headline-input-base-ce title="Antal brukare" value="" placeholder="Antal brukare..." slot="anyform"></headline-input-base-ce>
-    </anykind-container-ce>    
-</section-input-ce>
+    <anykind-container-one-ce slot="anycontainer">
+        <headline-one-ce title="Brukare" class="h4" slot="headline"></headline-one-ce>
+        <headline-input-one-ce title="Antal brukare" value="" placeholder="Antal brukare..." slot="anyform"></headline-input-one-ce>
+    </anykind-container-one-ce>    
+</section-input-one-ce>
 
 
-<section-output-ce>
-    <headline-base-ce title="Summering" class="h1 text-info" slot="anyheadline"></headline-base-ce>
-    <anykind-container-ce slot="anycontainer" listener="singleselectupdate@testfn">
-            <headline-base-ce title="Värmekostnader" class="h4" slot="headline"></headline-base-ce>
-            <headline-input-base-ce title="År 1" year="1" placeholder="Antal kr/kvm..." value="" slot="anyform" sr="heat:kwh@priceandcapitalize$" sb="heat:amount-1"></headline-input-base-ce>
-            <headline-input-base-ce title="År 2" year="2" placeholder="Antal kr/kvm..." value="" slot="anyform" sr="heat:kwh@priceandcapitalize$" sb="heat:amount-2"></headline-input-base-ce>
-            <headline-input-base-ce title="År 3" year="3" placeholder="Antal kr/kvm..." value="" slot="anyform" sr="heat:kwh@priceandcapitalize$" sb="heat:amount-3"></headline-input-base-ce>
-    </anykind-container-ce>
-    <anykind-container-ce slot="anycontainer" listener="singleselectupdate@testfn">
-        <headline-base-ce title="Diskonterade värmekostnader" class="h4" slot="headline"></headline-base-ce>
-        <headline-input-base-ce title="År 1" year="1" placeholder="Antal kr/kvm..." value="" slot="anyform" sr="heat:amount-1@discount$" sb="heat:discount-1"></headline-input-base-ce>
-        <headline-input-base-ce title="År 2" year="2" placeholder="Antal kr/kvm..." value="" slot="anyform" sr="heat:amount-2@discount$" sb="heat:discount-2"></headline-input-base-ce>
-        <headline-input-base-ce title="År 3" year="3" placeholder="Antal kr/kvm..." value="" slot="anyform" sr="heat:amount-3@discount$" sb="heat:discount-3"></headline-input-base-ce>
-    </anykind-container-ce>
-    <anykind-container-ce slot="anycontainer" listener="singleselectupdate@testfn">
-        <headline-base-ce title="Summa Diskonterade värmekostnader" class="h4" slot="headline"></headline-base-ce>
-        <headline-input-base-ce title="År 0" year="0" placeholder="Antal kr/kvm..." value="" slot="anyform" sr="heat:@discountsum$"></headline-input-base-ce>
-    </anykind-container-ce>
-    <!-- <anykind-container-ce slot="anycontainer" listener="singleselectupdate@testfn">
+<section-output-one-ce>
+    <headline-one-ce title="Summering" class="h1 text-info" slot="anyheadline"></headline-one-ce>
+    <anykind-container-one-ce slot="anycontainer" listener="singleselectupdate@testfn">
+            <headline-one-ce title="Värmekostnader" class="h4" slot="headline"></headline-one-ce>
+            <headline-input-one-ce title="År 1" year="1" placeholder="Antal kr/kvm..." value="" slot="anyform" sr="heat:kwh@priceandcapitalize$" sb="heat:amount-1"></headline-input-one-ce>
+            <headline-input-one-ce title="År 2" year="2" placeholder="Antal kr/kvm..." value="" slot="anyform" sr="heat:kwh@priceandcapitalize$" sb="heat:amount-2"></headline-input-one-ce>
+            <headline-input-one-ce title="År 3" year="3" placeholder="Antal kr/kvm..." value="" slot="anyform" sr="heat:kwh@priceandcapitalize$" sb="heat:amount-3"></headline-input-one-ce>
+    </anykind-container-one-ce>
+    <anykind-container-one-ce slot="anycontainer" listener="singleselectupdate@testfn">
+        <headline-one-ce title="Diskonterade värmekostnader" class="h4" slot="headline"></headline-one-ce>
+        <headline-input-one-ce title="År 1" year="1" placeholder="Antal kr/kvm..." value="" slot="anyform" sr="heat:amount-1@discount$" sb="heat:discount-1"></headline-input-one-ce>
+        <headline-input-one-ce title="År 2" year="2" placeholder="Antal kr/kvm..." value="" slot="anyform" sr="heat:amount-2@discount$" sb="heat:discount-2"></headline-input-one-ce>
+        <headline-input-one-ce title="År 3" year="3" placeholder="Antal kr/kvm..." value="" slot="anyform" sr="heat:amount-3@discount$" sb="heat:discount-3"></headline-input-one-ce>
+    </anykind-container-one-ce>
+    <anykind-container-one-ce slot="anycontainer" listener="singleselectupdate@testfn">
+        <headline-one-ce title="Summa Diskonterade värmekostnader" class="h4" slot="headline"></headline-one-ce>
+        <headline-input-one-ce title="År 0" year="0" placeholder="Antal kr/kvm..." value="" slot="anyform" sr="heat:@discountsum$"></headline-input-one-ce>
+    </anykind-container-one-ce>
+    <!-- <anykind-container-one-ce slot="anycontainer" listener="singleselectupdate@testfn">
             <headline-base-ce title="Reparationskostnader" class="h4" slot="headline"></headline-base-ce>
             <headline-input-base-ce title="År 1" year="1" placeholder="Antal kr/kvm..." value="" slot="anyform" sr="repair:amount-0@capitalize$"></headline-input-ce>
             <headline-input-base-ce title="År 2" year="2" placeholder="Antal kr/kvm..." value="" slot="anyform"></headline-input-base-ce>
             <headline-input-base-ce title="År 3" year="3" placeholder="Antal kr/kvm..." value="" slot="anyform"></headline-input-base-ce>
-    </anykind-container-ce> -->
-</section-output-ce>
+    </anykind-container-one-ce> -->
+</section-output-one-ce>
 
 <!-- 
 <section-input-ce listener="clearowninputsection@clearsection">
