--- a/public/index.html
+++ b/public/index.html
@@ -18,15 +18,23 @@
   <script src="js/customelement2.js" type="text/javascript"></script>
   <script src="js/customelement3.js" type="text/javascript"></script>
   <script src="ce/primary/input_one_ce.js" type="module"></script>
+  <script src="ce/primary/input_number_ce.js" type="module"></script>
   <script src="ce/primary/select_one_ce.js" type="module"></script>
+  <script src="ce/primary/select_year_ce.js" type="module"></script>
   <script src="ce/primary/select_inflation_ce.js" type="module"></script>
+  <script src="ce/primary/select_discount_ce.js" type="module"></script>
+  <script src="ce/primary/select_kwhprice_ce.js" type="module"></script>
   <script src="ce/primary/headline_one_ce.js" type="module"></script>
   <script src="ce/primary/button_one_ce.js" type="module"></script>
   <script src="ce/composed_without_slots/headline_input_base_ce.js" type="module"></script>
   <script src="ce/composed_without_slots/headline_input_one_ce.js" type="module"></script>
+  <script src="ce/composed_without_slots/headline_input_number_ce.js" type="module"></script>
   <script src="ce/composed_without_slots/headline_select_base_ce.js" type="module"></script>
   <script src="ce/composed_without_slots/headline_select_one_ce.js" type="module"></script>
+  <script src="ce/composed_without_slots/headline_select_year_ce.js" type="module"></script>
   <script src="ce/composed_without_slots/headline_select_inflation_ce.js" type="module"></script>
+  <script src="ce/composed_without_slots/headline_select_discount_ce.js" type="module"></script>
+  <script src="ce/composed_without_slots/headline_select_kwhprice_ce.js" type="module"></script>
   <script src="ce/composed_with_slots/anykind_container_one_ce.js" type="module"></script>
   <script src="ce/composed_with_slots/section_input_one_ce.js" type="module"></script>
   <script src="ce/composed_with_slots/section_output_one_ce.js" type="module"></script>
@@ -210,29 +218,29 @@
     
     <anykind-container-one-ce slot="anycontainer">
         <headline-one-ce title="Kalkylperiod" class="h4" slot="headline"></headline-one-ce>
-        <headline-select-one-ce title="Startår" selectedindex="3" slot="anyform" datatarget="startyear"></headline-select-one-ce>
-        <headline-input-one-ce title="Kalkyllängd" value="" placeholder="Antal brukare..." slot="anyform" sb="textinput1:keyup" sr="textinput1:keyup@updateheadline3$"></headline-input-one-ce>     
+        <headline-select-year-ce title="Startår" selectedindex="1" selectedvalue slot="anyform" datatarget="startyear"></headline-select-year-ce>
+        <headline-input-number-ce title="Kalkyllängd" value="" placeholder="Antal år..." slot="anyform" sb="textinput1:keyup" sr="textinput1:keyup@updateheadline3$"></headline-input-number-ce>     
     </anykind-container-one-ce>
 
     <anykind-container-one-ce slot="anycontainer">
         <headline-one-ce title="Inflation" class="h4" slot="headline"></headline-one-ce>
-        <headline-select-inflation-ce title="Inflation" selectedindex="0" slot="anyform" datatarget="inflation" sb="inflation:rate"></headline-select-inflation-ce>   
+        <headline-select-inflation-ce title="Inflation" selectedindex="0" selectedvalue slot="anyform" datatarget="inflation" sb="inflation:rate"></headline-select-inflation-ce>   
     </anykind-container-one-ce> 
 
     <anykind-container-one-ce slot="anycontainer">
         <headline-one-ce title="Kalkylränta" class="h4" slot="headline"></headline-one-ce>
-        <headline-select-one-ce title="Kalkylränta" selectedindex="0" slot="anyform" datatarget="discountrate" sb="discount:rate"></headline-select-one-ce>   
+        <headline-select-discount-ce title="Kalkylränta" selectedindex="0" selectedvalue slot="anyform" datatarget="discountrate" sb="discount:rate"></headline-select-discount-ce>   
     </anykind-container-one-ce> 
 
     <anykind-container-one-ce slot="anycontainer">
         <headline-one-ce title="Värmekostnader" class="h4" slot="headline"></headline-one-ce>
-        <headline-input-one-ce title="Antal kWh/kvm/år" value="" placeholder="Antal brukare..." slot="anyform" sb="heat:kwh" sr="clearbutton2:click@updateheadline2$"></headline-input-one-ce> 
-        <headline-select-one-ce title="Kostnad per kWh" selectedindex="0" slot="anyform" datatarget="heatcost" sb="heat:price"></headline-select-one-ce>
+        <headline-input-number-ce title="Antal kWh/kvm/år" value="" placeholder="Antal kWh..." slot="anyform" sb="heat:kwh" sr="clearbutton2:click@updateheadline2$"></headline-input-number-ce> 
+        <headline-select-kwhprice-ce title="Kostnad per kWh" selectedindex="0" selectedvalue slot="anyform" datatarget="heatcost" sb="heat:price"></headline-select-kwhprice-ce>
     </anykind-container-one-ce>
 
     <anykind-container-one-ce slot="anycontainer">
         <headline-one-ce title="Brukare" class="h4" slot="headline"></headline-one-ce>
-        <headline-input-one-ce title="Antal brukare" value="" placeholder="Antal brukare..." slot="anyform"></headline-input-one-ce>
+        <headline-input-number-ce title="Antal brukare" value="" placeholder="Antal brukare..." slot="anyform"></headline-input-number-ce>
     </anykind-container-one-ce>    
 </section-input-one-ce>
 
