Starting to change design

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
   <script src="ce/primary/select_discount_ce.js" type="module"></script>
   <script src="ce/primary/select_kwhprice_ce.js" type="module"></script>
   <script src="ce/primary/headline_one_ce.js" type="module"></script>
+  <script src="ce/primary/headline_label_ce.js" type="module"></script>
   <script src="ce/primary/button_one_ce.js" type="module"></script>
   <script src="ce/composed_without_slots/headline_input_base_ce.js" type="module"></script>
   <script src="ce/composed_without_slots/headline_input_one_ce.js" type="module"></script>
