Working - done refactoring CE3

--- a/public/index.html
+++ b/public/index.html
@@ -241,7 +241,9 @@
              -->
             <anykind-container-one-ce slot="anycontainer">
                 <headline-one-ce title="Kalkylperiod" class="h5" slot="headline"></headline-one-ce>
-                <headline-select-year-ce title="Startår" selectedindex="1" selectedvalue slot="anyform" datatarget="startyear"></headline-select-year-ce>
+                <headline-anyselect-ce title="Startår" slot="anyform">
+                    <select-year-ce slot="anyselect" selectedindex="1" selectedvalue></select-inflation-ce>
+                </headline-anyselect-ce> 
                 <headline-input-number-ce title="Kalkyllängd" value="20" placeholder="Antal år..." slot="anyform" sb="" sr=""></headline-input-number-ce>     
             </anykind-container-one-ce>
         
