--- a/public/index.html
+++ b/public/index.html
@@ -256,7 +256,9 @@
         
             <anykind-container-one-ce slot="anycontainer">
                 <headline-one-ce title="Kalkylränta" class="h5" slot="headline"></headline-one-ce>
-                <headline-select-discount-ce title="Kalkylränta" selectedindex="0" selectedvalue slot="anyform" datatarget="discountrate" sb="discount:rate"></headline-select-discount-ce>   
+                <headline-anyselect-ce title="Kalkylränta" slot="anyform">
+                    <select-discount-ce slot="anyselect" selectedindex="0" selectedvalue sb="discount:rate"></select-discount-ce>
+                </headline-anyselect-ce> 
             </anykind-container-one-ce> 
         
             <anykind-container-one-ce slot="anycontainer">
